--- a/leaderboard.html
+++ b/leaderboard.html
@@ -18,8 +18,15 @@
         </div>
 
         <div class="row">
-            <div class="twelve columns">
-                test
+            <div class="three columns">
+                    Total Words: <input type="number" class="" id="amount" placeholder="Total Word Count">
+            </div>
+            <div class="three columns">
+                    Username: <input type="text" class="" id="" placeholder="user">
+            </div>
+            <div class="three columns">
+                <input type="submit" class="" id="" value="Submit">
+            </div>
             </div>
         </div>
     </div>
